--- a/css/style.css
+++ b/css/style.css
@@ -12,19 +12,28 @@
 :root{
     /* colori */
     --player-col:#282828;
-    --upbar-col:#080B12;
+    --upbar-col:#080b127a;
     --main-col:#080B12;
     --white-col:white;
     --black-col:black;
+}
+
+img{
+    max-width: 100%;
 }
 /* common */
 .contenitore{
     display: flex;
     height: 90vh;
 
-
+    /* debug */
     background-color: lightblue;
 }
+
+.colum{
+    flex-direction: column;
+}
+
 
 /* playersection */
 
@@ -35,14 +44,18 @@
     bottom: 0;
     left: 0;
     z-index: 99999;
-
-
+    display: flex;
+    justify-content: space-between;
     /* debug */
 
     background-color: yellow;
 }
 
-
+.player-col{
+    background-color: lightcoral;
+    border: 1px solid black;
+    display: flex;
+}
 /* sidebar */
 
 .sidebar{
@@ -51,6 +64,7 @@
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 77777;
     /* debug */
 
     background-color: red;
@@ -61,8 +75,51 @@
 .central{
     width: calc(100% - 300px);
     margin-left: 300px;
-
+    overflow: auto;
 
     /* debug */
     background-color: lightcoral;
+}
+
+.upgrade-bar{
+    width: 100%;
+    height: 7vh;
+    position: fixed;
+    top: 0;
+    right: 0;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+        /* debug */
+    background-color: var(--upbar-col) ;
+}
+
+.main-contenitore{
+    width: 100%;
+    height: 100%;
+    margin-top: 7vh;
+
+    /* debug */
+    background-color: lightgreen;
+}
+
+/* interno del main contenitore */
+
+.filtra{
+    width: 60%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-around;
+}
+
+.song-container{
+    display: flex;
+}
+
+.song{
+    width: calc(100% / 6 - 1rem);
+    height:10vh;
+    margin-left: 1rem;
+
+    background-color: chocolate;
 }
