--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,10 @@
     /* colori */
     --player-col:#282828;
     --upbar-col:#080b127a;
-    --main-col:#080B12;
+    --main-col:#141922;
     --white-col:white;
     --black-col:black;
+    --subtitle-color:#7B7D82;
 }
 
 img{
@@ -75,10 +76,10 @@ img{
 .central{
     width: calc(100% - 300px);
     margin-left: 300px;
-    overflow: auto;
-
+    overflow-y: auto;
+    color: var(--white-col);
     /* debug */
-    background-color: lightcoral;
+    background-color:var(--main-col);
 }
 
 .upgrade-bar{
@@ -98,10 +99,14 @@ img{
     width: 100%;
     height: 100%;
     margin-top: 7vh;
+    padding-left: 2rem;
 
-    /* debug */
-    background-color: lightgreen;
 }
+
+.main-contenitore h4{
+    margin-bottom: 1rem;
+}
+
 
 /* interno del main contenitore */
 
@@ -110,6 +115,8 @@ img{
     margin: 0 auto;
     display: flex;
     justify-content: space-around;
+    margin-bottom: 2.5rem;
+    padding-top: 2REM;
 }
 
 .song-container{
@@ -118,8 +125,25 @@ img{
 
 .song{
     width: calc(100% / 6 - 1rem);
-    height:10vh;
-    margin-left: 1rem;
+    margin-bottom: 2rem;
+    margin-top: 1rem;
+    margin-right: 1rem;
+   
+}
 
-    background-color: chocolate;
+.circle{
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.song .text{
+    text-align: center;
+}
+.song h3{
+    padding-top: 2rem;
+}
+
+.song h4{
+    padding-top: 0.5rem;
+    color: var(--subtitle-color);
 }
