--- a/css/style.css
+++ b/css/style.css
@@ -31,10 +31,18 @@ img{
     background-color: lightblue;
 }
 
+hr{
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
 .colum{
     flex-direction: column;
 }
 
+ul li{
+    list-style: none;
+    padding: 0.5rem;
+}
 
 /* playersection */
 
@@ -66,11 +74,34 @@ img{
     top: 0;
     left: 0;
     z-index: 77777;
-    /* debug */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    color: var(--white-col);
+    background-color: var(--black-col);
 
-    background-color: red;
+}
+.container-sidebar{
+    padding: 1rem;
+}
+.bottom{
+    display: flex;
+    flex-direction: column;
+    display: inline-block;
 }
 
+.installa{
+    display: flex;
+    align-items: center;
+}
+
+.sidebar-bottom-text{
+    padding-left: 1rem;
+}
+.icon-sidebar{
+    display: inline-block;
+    width: 10%;
+}
 /* central */
 
 .central{
