--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,10 @@
 img{
     max-width: 100%;
 }
+
+html{
+    font-family: 'Montserrat', sans-serif;
+}
 /* common */
 .contenitore{
     display: flex;
@@ -64,7 +68,49 @@ ul li{
     background-color: lightcoral;
     border: 1px solid black;
     display: flex;
+    align-items: center;
 }
+
+/* left bar */
+ .separare> div{
+    padding-right: 1rem;
+}
+.icons-player-left{
+    padding-left: 2rem;
+}
+.separare i{
+    padding-right: 1rem;
+}
+.left-image{
+    width: 5vh;
+}
+
+.pad-left{
+    padding-left: 2rem;
+}
+
+
+/* central bar */
+/* top */
+.play{
+    display: flex;
+    align-items: center;
+    height: 50%;
+}
+
+.play i{
+    padding: 1rem;
+    font-size: 2rem;
+}
+/* bottom */
+.play hr{
+    display: inline-block;
+}
+.songbar{
+    margin: 1rem; 
+}
+
+
 /* sidebar */
 
 .sidebar{
@@ -113,8 +159,10 @@ ul li{
     background-color:var(--main-col);
 }
 
+
+
 .upgrade-bar{
-    width: 100%;
+    width: calc(100% - 300PX);
     height: 7vh;
     position: fixed;
     top: 0;
@@ -125,7 +173,18 @@ ul li{
         /* debug */
     background-color: var(--upbar-col) ;
 }
+/* bottone */
+.upgrade-button{
+    margin-right:4rem;   
+}
 
+.upgrade-button a{
+    text-decoration: none;
+    color: white;
+    border:1px solid white;
+    padding: 1rem 3rem;
+    border-radius: 2rem;
+}
 .main-contenitore{
     width: 100%;
     height: 100%;
