--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@
     --subtitle-color:#7B7D82;
     --plus-col:#A3A3A3;
     --font:#777A7F;
+    --borderbott-green:#ADFF2F;
 }
 
 img{
@@ -288,6 +289,10 @@ input[type="range" i]{
     font-weight: 600;
     color: var(--font);
     
+}
+
+.filtra ul li:hover{
+    border-bottom: 1px solid var(--borderbott-green);
 }
 .song-container{
     display: flex;
